--- a/indexForTesting.html
+++ b/indexForTesting.html
@@ -18,13 +18,15 @@
 	<script src="js\funcs_pageone.js"></script>
 	<script src="js\funcs_pagetwo.js"></script>
 	<script src="js\spin.js"></script>
+
+	
 </head>
 
 <body onLoad="firstFunction()" >
 
 <!-- PAGE ONE -->
 <div data-role="page" id="pageone">
-	<div data-role="header"   id="head" data-theme="b">
+	<div data-role="header" data-position="fixed" data-tap-toggle="false"  id="head" data-theme="b">
 		<div class="ui-grid-a">
 			<div class="ui-block-a">
 			<h3>TOTAL<br/>Rs. <span id = "total_price">0.00</span></h3>
@@ -37,7 +39,7 @@
 		<div class="ui-grid-b">
 			<div class="ui-block-a"><a id="btnExpand"  class="ui-btn ui-corner-all collapseExpand">Expand All</a></div>
 			<div class="ui-block-b"><a id="btnCollapse" class="ui-btn ui-corner-all collapseExpand">Collapse All</a></div>
-			<div class="ui-block-c"><a id="btnDelete" class="ui-btn ui-corner-all" onclick="deleteAll()">Delete All</a></div>
+			<div class="ui-block-c"><a id="btnDelete" class="ui-btn ui-corner-all " onClick="deleteAll()">Delete All</a></div>
 		</div>
 	</div>
 	
@@ -45,7 +47,7 @@
 		<div id="wrapper" data-role="content"></div>
 	</div>
 
-	<div data-role="footer"  data-theme="b" id="foot">
+	<div data-role="footer" data-position="fixed" data-theme="b" id="foot">
 		<div data-role="navbar" data-theme="b" class = "app"> 
 		<ul>
 			<li><a href="#" data-icon="plus" class="topcoat-button" id= "scan" onclick ="begin()">Add New Product</a></li>
@@ -75,13 +77,12 @@ var cart_top=0;
 var appUniqueKey="VC";
 var separator=",";
 var server_url;
-
 </script>
 
 <!-- PAGE TWO -->
 
 <div data-role="page" id="pagetwo" >
-	<div data-role="header" data-theme="b" id="pagetwoHeader">
+	<div data-role="header" data-position="fixed" data-theme="b" id="pagetwoHeader">
 		<h1 id="grandTotal">Grand Total: Rs. <span id = "grandTotalPagetwo"></span></h1> 
 		<h2 id="totalDiscount">Total Discount: Rs. <span id = "totalDiscountPagetwo"></span></h2>
 	</div>
@@ -92,7 +93,7 @@ var server_url;
 		</div>		
 		</div>		
 	</div>	
-	<div data-role="footer"  data-theme="b" id="pageTwoFooter">
+	<div data-role="footer" data-position="fixed" data-theme="b" id="footerTwo">
 		<div data-role="navbar" data-theme="b">
 			<ul>
 				<li><a href="#pageone" data-icon="edit">Manage Cart</a></li>
